--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -5,7 +5,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <span id="message"></span>
+    <span id="message">Working...</span>
     <script src="script.js"></script>
   </body>
 </html>
