add README and buttons to popup

--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <span id="message">Working...</span>
+    <button>👨‍💻</button>
+    <button>✏️</button>
+    <button>🎈</button>
+    <button>🚀</button>
     <script src="script.js"></script>
   </body>
 </html>
