make buttons work + add simple text button

--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -5,11 +5,19 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <span id="message">Working...</span>
-    <button>👨‍💻</button>
-    <button>✏️</button>
-    <button>🎈</button>
-    <button>🚀</button>
+    <div>
+      <span id="message">Working...</span>
+    </div>
+    <div id="emojis" class="hidden">
+      <button>👨‍💻</button>
+      <button>✏️</button>
+      <button>🎈</button>
+      <button>🚀</button>
+      <button>🔍</button>
+    </div>
+    <div id="simple" class="hidden">
+      <button>Simple</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
