--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -11,9 +11,10 @@
     <div id="emojis" class="hidden">
       <button>👨‍💻</button>
       <button>✏️</button>
-      <button>🎈</button>
+      <button>🎈</button> <br />
       <button>🚀</button>
       <button>🔍</button>
+      <button>✉️</button>
     </div>
     <div id="simple" class="hidden">
       <button>Simple</button>
