add hourglass icon

--- a/browserAction/index.html
+++ b/browserAction/index.html
@@ -14,7 +14,8 @@
       <button>🎈</button> <br />
       <button>🚀</button>
       <button>🔍</button>
-      <button>✉️</button>
+      <button>✉️</button> <br />
+      <button>⏳</button>
     </div>
     <div id="simple" class="hidden">
       <button>Simple</button>
